<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/north_star_blue"
    tools:context=".ui.sign_in.SignInActivity">

    <TextView
        android:id="@+id/tv_title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        style="@style/TitleSignIn"
        android:text="@string/join_us_with"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_subtitle_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="86dp"
        style="@style/SubTitleSignIn"
        android:text="@string/e_system_apps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_lbl_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        style="@style/TitleEditText"
        android:text="@string/full_name"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle_login"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_full_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:inputType="text"
        style="@style/EditTextStyle"
        android:hint="@string/hint_your_full_name"
        android:autofillHints="name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_full_name" />

    <TextView
        android:id="@+id/tv_lbl_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        style="@style/TitleEditText"
        android:text="@string/division"
        app:layout_constraintTop_toBottomOf="@id/et_full_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_spinner_division"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bg_edit_text_stroke_white_fill_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_division">

        <TextView
            android:id="@+id/tv_division"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            style="@style/TextForSpinner"
            android:text="@string/choose_your_division"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_spinner_division"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_spinner_division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_dropdown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_lbl_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        style="@style/TitleEditText"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/constraint_spinner_division"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutPassword"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        app:boxStrokeColor="#00FFFFFF"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/constraint_spinner_division"
        app:layout_constraintStart_toStartOf="@+id/constraint_spinner_division"
        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_password"
        app:passwordToggleTint="@color/white"
        app:passwordToggleEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edPassword"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/your_password"
            android:paddingTop="20dp"
            android:inputType="textPassword"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forget_password"
        style="@style/TextPoppinsLight12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="@+id/txtLayoutPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtLayoutPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/bg_button_white"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="#6072EE"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/txtLayoutPassword"
        app:layout_constraintStart_toStartOf="@+id/txtLayoutPassword"
        app:layout_constraintTop_toBottomOf="@+id/tv_forget_password" />

    <TextView
        android:id="@+id/tv_lbl_another_sign_in"
        style="@style/TextPoppinsregular12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Or Sign Up with"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_in"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_register"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="6dp"
        app:cardCornerRadius="11dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_another_sign_in" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_register"
                android:layout_marginStart="23dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_lbl_register"
                style="@style/TextPoppinsMedium15sp6072EE"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="23dp"
                android:text="@string/register_new_account"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_register"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_sign_in_google"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="11dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_register">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:src="@drawable/ic_google"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_lbl_google"
                style="@style/TextPoppinsMedium15sp6072EE"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="23dp"
                android:text="@string/sign_in_with_google"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_google"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>