<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main_pages.home_fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_header"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/bg_header_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="45dp"
            style="@style/TitleOnBoarding"
            android:text="@string/dummy_title_home"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_photo_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:src="@color/black"
            app:layout_constraintTop_toTopOf="@id/tv_user_name"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextPoppinsLight12sp"
            android:text="@string/dummy_title_date"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name"
            app:layout_constraintStart_toStartOf="@id/tv_user_name"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <HorizontalScrollView
        android:id="@+id/hsv_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/constraint_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_youtube"
                android:layout_width="200dp"
                android:layout_height="208dp"
                android:layout_marginStart="27dp"
                android:elevation="2dp"
                app:cardCornerRadius="11dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/youtube_red"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextPoppinsBold24sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="14dp"
                        android:text="@string/title_dummy_youtube" />

                    <ImageView
                        android:id="@+id/iv_youtube"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/ic_youtube" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="14dp"
                        style="@style/TextPoppinsregular12sp"
                        android:text="@string/dummy_title_play_video"/>


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_informational"
                android:layout_width="200dp"
                android:layout_height="208dp"
                android:layout_marginStart="14dp"
                android:elevation="2dp"
                app:cardCornerRadius="11dp"
                android:layout_marginEnd="35dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/cv_youtube"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_informational"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_informational"/>


            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </HorizontalScrollView>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        app:constraint_referenced_ids="cv_absensi,cv_approval,cv_payroll,cv_earsip,cv_chat"
        app:flow_horizontalStyle="spread"
        app:flow_maxElementsWrap="3"
        app:flow_wrapMode="aligned"
        app:flow_horizontalGap="11dp"
        app:flow_verticalGap="11dp"
        app:layout_constraintTop_toBottomOf="@id/hsv_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_absensi"
        android:layout_width="117dp"
        android:layout_height="132dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="11dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_absensi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/broken_white">

            <ImageView
                android:id="@+id/iv_absensi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_absensi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_absensi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextPoppinsLight12spBlue"
                android:layout_marginTop="6dp"
                android:text="Absensi"
                app:layout_constraintTop_toBottomOf="@id/iv_absensi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_approval"
        android:layout_width="117dp"
        android:layout_height="132dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="11dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_approval"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/broken_white">

            <ImageView
                android:id="@+id/iv_approval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_approval"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_approval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextPoppinsLight12spBlue"
                android:layout_marginTop="6dp"
                android:text="Approval"
                app:layout_constraintTop_toBottomOf="@id/iv_approval"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_payroll"
        android:layout_width="117dp"
        android:layout_height="132dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="11dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_payroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/broken_white">

            <ImageView
                android:id="@+id/iv_payroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_payroll"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_payroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextPoppinsLight12spBlue"
                android:layout_marginTop="6dp"
                android:text="Payroll"
                app:layout_constraintTop_toBottomOf="@id/iv_payroll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_earsip"
        android:layout_width="117dp"
        android:layout_height="132dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="11dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_earsip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/broken_white">

            <ImageView
                android:id="@+id/iv_earsip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_e_arsip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_earsip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextPoppinsLight12spBlue"
                android:layout_marginTop="6dp"
                android:text="E-Arsip"
                app:layout_constraintTop_toBottomOf="@id/iv_earsip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_chat"
        android:layout_width="117dp"
        android:layout_height="132dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="11dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_chat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/broken_white">

            <ImageView
                android:id="@+id/iv_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_chat_div"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextPoppinsLight12spBlue"
                android:layout_marginTop="6dp"
                android:text="Chat Div"
                app:layout_constraintTop_toBottomOf="@id/iv_chat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>